Fix CaptureTest for Java 8 compatibility